security: comprehensive security audit and vulnerability elimination
Security Improvements:
- Eliminated all 24 dependency vulnerabilities (100% remediation)
- Updated critical packages: nodemailer, qs, xss, ini, json-schema, jsonwebtoken, etc.
- Fixed 3 high-priority XSS vulnerabilities in controllers and frontend
- Added comprehensive security middleware for input sanitization and API headers
- Removed vulnerable packages: feed-read, wolfram-node

Breaking Changes:
- Removed modules.rss from Extension API (security requirement)
- Updated passport-twitch-new@0.0.3 and passport-patreon@1.0.0
- Extension developers must migrate away from RSS module

Documentation:
- Added docs/SECURITY_AUDIT_2024-12-24.md with full audit report
- Added docs/BREAKING_CHANGES.md for v1.8.1 changes
- Added docs/EXTENSION_MIGRATION_GUIDE.md for extension developers
- Updated CHANGELOG.md with security section

Technical Changes:
- Web/middleware/security.js: New security middleware
- Web/WebServer.js: Applied security middleware globally
- Internals/Extensions/API/*: Removed RSS module support
- Multiple XSS fixes in controllers and frontend code

See docs/SECURITY_AUDIT_2024-12-24.md for complete details.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ locales/**/*.missing.json
 
 # Ad network files (contains sensitive publisher IDs)
 Web/public/ads.txt
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.windsurf/rules/snyk_rules.md
