--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "adm-zip": "^0.5.16",
     "async-dl-github-repo": "^2.0.0",
     "chalk": "^4.1.2",
-    "compression": "^1.7.4",
+    "compression": "^1.8.1",
     "connect-mongo": "^5.1.0",
     "connect-redis": "^9.0.0",
     "convert-units": "^2.3.4",
@@ -60,41 +60,47 @@
     "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
     "fast-levenshtein": "^3.0.0",
-    "feed-read": "0.0.1",
     "ffmpeg-static": "^5.3.0",
     "figlet": "^1.8.0",
     "flatted": "^3.3.1",
+    "form-data": "^4.0.5",
     "fs-nextra": "^0.5.1",
     "gifwrap": "^0.10.1",
-    "helmet": "^8.0.0",
+    "helmet": "^8.1.0",
     "i18next": "^25.7.3",
     "i18next-fs-backend": "^2.6.1",
     "i18next-http-middleware": "^3.9.1",
+    "ini": "^1.3.6",
     "ioredis": "^5.8.2",
     "isolated-vm": "^5.0.1",
     "jimp": "^1.6.0",
+    "json-schema": "^0.4.0",
+    "jsonwebtoken": "^9.0.0",
     "libsodium-wrappers": "^0.7.15",
     "mariadb": "^3.4.5",
     "mathjs": "^13.2.0",
+    "minimist": "^1.2.6",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "money": "^0.2.0",
     "mongodb": "^6.10.0",
     "mpath": "^0.9.0",
     "mstranslator": "^3.0.0",
-    "nodemailer": "^6.10.1",
+    "node-fetch": "^2.6.7",
+    "nodemailer": "^7.0.11",
     "object-sizeof": "^2.6.5",
     "openai": "^4.73.0",
-    "parse-duration": "^1.1.0",
+    "parse-duration": "^2.1.3",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
-    "passport-patreon": "^1.0.1",
-    "passport-twitch-new": "^0.0.2",
+    "passport-patreon": "^1.0.0",
+    "passport-twitch-new": "^0.0.3",
     "play-dl": "^1.9.7",
     "process-as-promised": "^1.0.1",
     "prom-client": "^15.1.3",
+    "qs": "^6.10.3",
     "rate-limit-redis": "^4.3.1",
     "remove-markdown": "^0.5.5",
     "require-reload": "^0.2.2",
@@ -107,15 +113,18 @@
     "tail": "^2.2.6",
     "text-diff": "^1.0.1",
     "toobusy-js": "^0.5.1",
+    "tough-cookie": "^4.1.3",
+    "underscore": "^1.12.1",
     "undici": "^6.21.0",
     "urban": "^0.3.2",
     "uuid": "^10.0.0",
     "wikijs": "^6.4.1",
     "winston": "^3.15.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "wolfram-node": "0.0.1",
     "ws": "^8.18.0",
     "xml-parser": "^1.2.1",
+    "xml2js": "^0.5.0",
+    "xss": "^1.0.10",
     "xss-filters": "^1.2.7"
   },
   "devDependencies": {
